Update resposive design in projects

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     <section id="about" class="section-content">
         <h1>ABOUT ME</h1>
         <div class="about-content row">
-            <div class="about-content-left">
+            <div class="about-content-left col">
                 <h3>
                     <strong>David Hsieh | MSCS@<a href="https://cse.ucsd.edu/">UCSD</a></strong>
                 </h3>
@@ -126,10 +126,11 @@
             </div>
         </div>
     </section>
+    <!-- Projects -->
     <section id="projects" class="section-content col">
         <h1>PROJECTS</h1>
         <div class="projects-content row">
-            <div class="projects-content-right">
+            <div>
                 <h2>BearMaps</h2>
                 <div class="project-link-group" id="project-link">
                     <a class="github-project-link" href="https://github.com/davidyen-888/bearmaps"><i
@@ -157,7 +158,7 @@
                 </p>
             </div>
 
-            <div class="projects-content-left">
+            <div>
                 <div id="bearmap-carousel" class="carousel slide" data-ride="carousel">
                     <div class="carousel-inner">
                         <div class="carousel-item active">
@@ -182,32 +183,7 @@
                 </div>
             </div>
         </div>
-        <div class="projects-content row">
-            <div class="projects-content-left">
-                <h2>PM 2.5 Detector</h2>
-                <div class="project-link-group" id="project-link">
-                    <a class="github-project-link" href="https://github.com/davidyen-888/PM2.5-Detector"><i
-                            class="fab fa-github"></i></a>
-                </div>
-                <p>
-                    An <b>Android application</b> connected with Arduino air quality sensor(PMS3003) by
-                    bluetooth module.
-                </p>
-                <p>
-                    Users can detect the PM 2.5 level of the their environment without connecting
-                    to the Internet.
-                </p>
-                <p id="skillset">
-                    <span>Java</span>
-                    <span>Arduino</span>
-                    <span>Android Studio</span>
-                    <span>Blender</span>
-                </p>
-            </div>
-            <div class="projects-content-right">
-                <img class="pm25-picture" src="images/pm2.5.jpg" alt="">
-            </div>
-        </div>
+
         <div class="projects-content row">
             <div class="projects-content-right">
                 <h2>Percolation</h2>
@@ -230,7 +206,7 @@
                     <span>Monte Carlo Simulation</span>
                 </p>
             </div>
-            <div class="projects-content-left">
+            <div>
                 <div id="percolation-carousel" class="carousel slide" data-ride="carousel">
                     <div class="carousel-inner">
                         <div class="carousel-item active">
@@ -260,8 +236,9 @@
                 </div>
             </div>
         </div>
+
         <div class="projects-content row">
-            <div class="projects-content-left">
+            <div>
                 <h2>Weather Bot</h2>
                 <div class="project-link-group" id="project-link">
                     <a class="github-project-link" href="https://github.com/davidyen-888/Discord-Weather-Bot"><i
@@ -278,13 +255,39 @@
                     <span>Heroku</span>
                 </p>
             </div>
-            <div class="projects-content-right">
+            <div>
                 <img class="bot-picture"
                     src="https://user-images.githubusercontent.com/61106644/124215941-a433d580-db27-11eb-9bdc-87e112f429bc.gif"
                     alt="">
             </div>
         </div>
+
+        <div class="projects-content row">
+            <div>
+                <h2>PM 2.5 Detector</h2>
+                <div class="project-link-group" id="project-link">
+                    <a class="github-project-link" href="https://github.com/davidyen-888/PM2.5-Detector"><i
+                            class="fab fa-github"></i></a>
+                </div>
+                <p>
+                    An <b>Android application</b> connected with Arduino air quality sensor(PMS3003) by
+                    bluetooth module.
+                    Users can detect the PM 2.5 level of the their environment without connecting
+                    to the Internet.
+                </p>
+                <p id="skillset">
+                    <span>Java</span>
+                    <span>Arduino</span>
+                    <span>Android Studio</span>
+                    <span>Blender</span>
+                </p>
+            </div>
+            <div>
+                <img class="pm25-picture" src="images/pm2.5.jpg" alt="">
+            </div>
+        </div>
     </section>
+    <!-- Contact -->
     <section id="contact" class="section-content col">
         <h1>FIND ME ON</h1>
         <div class="footer-links">
