Update resume and about styling

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                 <div class="collapse" id="collapse-intro">
                     <div class="card card-body">
                         <p>
-                            I am currently a CS Master's student focusing on the field of
+                            I am pursuing MSCS degree in UCSD focusing on the field of
                             <b>Human-Computer Interaction</b>.
                         </p>
                         <p>
@@ -84,7 +84,7 @@
                         <p>
                             I am also capable of learning new skills what my job needed in the fast pace. My
                             goal is to be a learner and contributor in every position, especially in the field
-                            of <b>Frontend-development</b>.
+                            of <b>Frontend and Software engineering</b>.
                         </p>
                     </div>
                 </div>
@@ -123,7 +123,7 @@
                 </div>
                 </p>
             </div>
-            <div class="about-content-right">
+            <div class="about-content-right col">
                 <img class="about-picture" src="images/me.jpg" alt="">
             </div>
         </div>
