--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
+    <!-- og: tags for Open Graph Protocol -->
+    <meta property='og:title' content='David Hsieh' />
+    <meta property='og:image' content='https://davidyen-888.github.io/Personal-Website/images/me.jpg' />
+    <meta property='og:url' content='https://davidyen-888.github.io/Personal-Website/' />
+
     <!-- Google Font -->
     <link href="https://fonts.googleapis.com/css?family=Nunito:200,300,400,700" rel="stylesheet">
 
@@ -89,7 +94,7 @@
                     </div>
                 </div>
                 <p id="skills">
-                Skills
+                    Skills
                 <div class="skills-content">
                     <ul>
                         <li>
