Project section responsive update

--- a/index.html
+++ b/index.html
@@ -67,9 +67,9 @@
         <h1>ABOUT ME</h1>
         <div class="about-content row">
             <div class="about-content-left col">
-                <h3>
+                <h4>
                     <strong>David Hsieh | MSCS@<a href="https://cse.ucsd.edu/">UCSD</a></strong>
-                </h3>
+                </h4>
                 <p>
                     <a id="intro-btn" class="btn btn-secondary" data-toggle="collapse" href="#collapse-intro"
                         aria-expanded="false" aria-controls="collapse-intro">
@@ -134,10 +134,10 @@
         </div>
     </section>
     <!-- Projects -->
-    <section id="projects" class="section-content col">
+    <section id="projects" class="section-content">
         <h1>PROJECTS</h1>
         <div class="projects-content row">
-            <div>
+            <div class="col" id="projects-description">
                 <h2>BearMaps</h2>
                 <div class="project-link-group" id="project-link">
                     <a class="github-project-link" href="https://github.com/davidyen-888/bearmaps"><i
@@ -167,7 +167,7 @@
                 </div>
             </div>
 
-            <div>
+            <div class="col" id="projects-image">
                 <div id="bearmap-carousel" class="carousel slide" data-ride="carousel">
                     <div class="carousel-inner">
                         <div class="carousel-item active">
@@ -194,7 +194,7 @@
         </div>
 
         <div class="projects-content row">
-            <div class="projects-content-right">
+            <div class="col" id="projects-description">
                 <h2>Percolation</h2>
                 <div class="project-link-group" id="project-link">
                     <a class="github-project-link" href="https://github.com/davidyen-888/UCB-CS61B/tree/master/hw2"><i
@@ -216,7 +216,7 @@
                     <span>Monte Carlo Simulation</span>
                 </div>
             </div>
-            <div>
+            <div class="col" id="projects-image">
                 <div id="percolation-carousel" class="carousel slide" data-ride="carousel">
                     <div class="carousel-inner">
                         <div class="carousel-item active">
@@ -248,7 +248,7 @@
         </div>
 
         <div class="projects-content row">
-            <div>
+            <div class="col" id="projects-description">
                 <h2>PM 2.5 Detector</h2>
                 <div class="project-link-group" id="project-link">
                     <a class="github-project-link" href="https://github.com/davidyen-888/PM2.5-Detector"><i
@@ -271,13 +271,13 @@
                     <span>Blender</span>
                 </div>
             </div>
-            <div>
+            <div class="col" id="projects-image">
                 <img class="pm25-picture" src="images/pm2.5.jpg" alt="">
             </div>
         </div>
 
         <div class="projects-content row">
-            <div>
+            <div class="col" id="projects-description">
                 <h2>Weather Bot</h2>
                 <div class="project-link-group" id="project-link">
                     <a class="github-project-link" href="https://github.com/davidyen-888/Discord-Weather-Bot"><i
@@ -296,7 +296,7 @@
                     <span>Heroku</span>
                 </div>
             </div>
-            <div>
+            <div class="col" id="projects-image">
                 <img class="bot-picture"
                     src="https://user-images.githubusercontent.com/61106644/124215941-a433d580-db27-11eb-9bdc-87e112f429bc.gif"
                     alt="">
